// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render with checked styles when passed the checked prop 1`] = `
Array [
  .circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

<input
    checked={true}
    className="circuit-0 circuit-1"
    disabled={false}
    id="checkbox_2"
    name="name"
    onChange={[MockFunction]}
    type="checkbox"
  />,
  .circuit-0 {
  color: #5C656F;
  padding-left: 24px;
  position: relative;
}

.circuit-0::before {
  height: 16px;
  width: 16px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 0.05s ease-in;
  transition: border 0.05s ease-in;
}

.circuit-0::after {
  height: 10px;
  width: 10px;
  line-height: 0;
  content: url("data:image/svg+xml,%3Csvg%20width%3D'10'%20height%3D'10'%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%3E%3Cpath%20d%3D'M3.438%206.973l5.097-5.694a.858.858%200%200%201%201.175-.086c.349.288.389.793.089%201.128l-5.73%206.4a.856.856%200%200%201-1.264%200L.201%205.812a.778.778%200%200%201%20.09-1.128.858.858%200%200%201%201.174.086l1.973%202.203z'%20fill%3D'%233388FF'%20fill-rule%3D'nonzero'%2F%3E%3C%2Fsvg%3E");
  display: block;
  position: absolute;
  top: 50%;
  left: 3px;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  opacity: 0;
  -webkit-transition: -webkit-transform 0.05s ease-in,opacity 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,opacity 0.05s ease-in;
  transition: transform 0.05s ease-in,opacity 0.05s ease-in;
}

.circuit-0:checked + label::after {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3388FF;
}

<label
    checked={true}
    className="circuit-0 circuit-1"
    disabled={false}
    htmlFor="checkbox_2"
    name="name"
  />,
]
`;

exports[`Checkbox should render with default styles 1`] = `
Array [
  .circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

<input
    checked={false}
    className="circuit-0 circuit-1"
    disabled={false}
    id="checkbox_1"
    name="name"
    onChange={[MockFunction]}
    type="checkbox"
  />,
  .circuit-0 {
  color: #5C656F;
  padding-left: 24px;
  position: relative;
}

.circuit-0::before {
  height: 16px;
  width: 16px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 0.05s ease-in;
  transition: border 0.05s ease-in;
}

.circuit-0::after {
  height: 10px;
  width: 10px;
  line-height: 0;
  content: url("data:image/svg+xml,%3Csvg%20width%3D'10'%20height%3D'10'%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%3E%3Cpath%20d%3D'M3.438%206.973l5.097-5.694a.858.858%200%200%201%201.175-.086c.349.288.389.793.089%201.128l-5.73%206.4a.856.856%200%200%201-1.264%200L.201%205.812a.778.778%200%200%201%20.09-1.128.858.858%200%200%201%201.174.086l1.973%202.203z'%20fill%3D'%233388FF'%20fill-rule%3D'nonzero'%2F%3E%3C%2Fsvg%3E");
  display: block;
  position: absolute;
  top: 50%;
  left: 3px;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  opacity: 0;
  -webkit-transition: -webkit-transform 0.05s ease-in,opacity 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,opacity 0.05s ease-in;
  transition: transform 0.05s ease-in,opacity 0.05s ease-in;
}

.circuit-0:checked + label::after {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3388FF;
}

<label
    checked={false}
    className="circuit-0 circuit-1"
    disabled={false}
    htmlFor="checkbox_1"
    name="name"
  />,
]
`;

exports[`Checkbox should render with disabled styles when passed the disabled prop 1`] = `
Array [
  .circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

<input
    checked={false}
    className="circuit-0 circuit-1"
    disabled={true}
    id="checkbox_3"
    name="name"
    onChange={[MockFunction]}
    type="checkbox"
  />,
  .circuit-0 {
  color: #5C656F;
  padding-left: 24px;
  position: relative;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-0::before {
  height: 16px;
  width: 16px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 0.05s ease-in;
  transition: border 0.05s ease-in;
}

.circuit-0::after {
  height: 10px;
  width: 10px;
  line-height: 0;
  content: url("data:image/svg+xml,%3Csvg%20width%3D'10'%20height%3D'10'%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%3E%3Cpath%20d%3D'M3.438%206.973l5.097-5.694a.858.858%200%200%201%201.175-.086c.349.288.389.793.089%201.128l-5.73%206.4a.856.856%200%200%201-1.264%200L.201%205.812a.778.778%200%200%201%20.09-1.128.858.858%200%200%201%201.174.086l1.973%202.203z'%20fill%3D'%233388FF'%20fill-rule%3D'nonzero'%2F%3E%3C%2Fsvg%3E");
  display: block;
  position: absolute;
  top: 50%;
  left: 3px;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  opacity: 0;
  -webkit-transition: -webkit-transform 0.05s ease-in,opacity 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,opacity 0.05s ease-in;
  transition: transform 0.05s ease-in,opacity 0.05s ease-in;
}

.circuit-0:checked + label::after {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3388FF;
}

.circuit-0::before {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  border-color: #9DA7B1;
  background-color: #FAFBFC;
}

.circuit-0::after {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  content: url("data:image/svg+xml,%3Csvg%20width%3D'10'%20height%3D'10'%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%3E%3Cpath%20d%3D'M3.438%206.973l5.097-5.694a.858.858%200%200%201%201.175-.086c.349.288.389.793.089%201.128l-5.73%206.4a.856.856%200%200%201-1.264%200L.201%205.812a.778.778%200%200%201%20.09-1.128.858.858%200%200%201%201.174.086l1.973%202.203z'%20fill%3D'%239DA7B1'%20fill-rule%3D'nonzero'%2F%3E%3C%2Fsvg%3E");
}

<label
    checked={false}
    className="circuit-0 circuit-1"
    disabled={true}
    htmlFor="checkbox_3"
    name="name"
  />,
]
`;

exports[`Checkbox should render with invalid styles when passed the invalid prop 1`] = `
Array [
  .circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

<input
    checked={false}
    className="circuit-0 circuit-1"
    disabled={false}
    id="checkbox_4"
    name="name"
    onChange={[MockFunction]}
    type="checkbox"
  />,
  .circuit-0 {
  color: #5C656F;
  padding-left: 24px;
  position: relative;
}

.circuit-0::before {
  height: 16px;
  width: 16px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 3px;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: border 0.05s ease-in;
  transition: border 0.05s ease-in;
}

.circuit-0::after {
  height: 10px;
  width: 10px;
  line-height: 0;
  content: url("data:image/svg+xml,%3Csvg%20width%3D'10'%20height%3D'10'%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%3E%3Cpath%20d%3D'M3.438%206.973l5.097-5.694a.858.858%200%200%201%201.175-.086c.349.288.389.793.089%201.128l-5.73%206.4a.856.856%200%200%201-1.264%200L.201%205.812a.778.778%200%200%201%20.09-1.128.858.858%200%200%201%201.174.086l1.973%202.203z'%20fill%3D'%233388FF'%20fill-rule%3D'nonzero'%2F%3E%3C%2Fsvg%3E");
  display: block;
  position: absolute;
  top: 50%;
  left: 3px;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  opacity: 0;
  -webkit-transition: -webkit-transform 0.05s ease-in,opacity 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,opacity 0.05s ease-in;
  transition: transform 0.05s ease-in,opacity 0.05s ease-in;
}

.circuit-0:checked + label::after {
  -webkit-transform: translateY(-50%) scale(1,1);
  -ms-transform: translateY(-50%) scale(1,1);
  transform: translateY(-50%) scale(1,1);
  opacity: 1;
}

.circuit-0:checked + label::before {
  border-color: #3388FF;
}

.circuit-0:not(:focus)::before {
  border-color: #FF7559;
}

.circuit-0:not(:focus)::after {
  content: url("data:image/svg+xml,%3Csvg%20width%3D'10'%20height%3D'10'%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%3E%3Cpath%20d%3D'M3.438%206.973l5.097-5.694a.858.858%200%200%201%201.175-.086c.349.288.389.793.089%201.128l-5.73%206.4a.856.856%200%200%201-1.264%200L.201%205.812a.778.778%200%200%201%20.09-1.128.858.858%200%200%201%201.174.086l1.973%202.203z'%20fill%3D'%23FF7559'%20fill-rule%3D'nonzero'%2F%3E%3C%2Fsvg%3E");
}

<label
    checked={false}
    className="circuit-0 circuit-1"
    disabled={false}
    htmlFor="checkbox_4"
    name="name"
  />,
]
`;
